# fishRegression

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml
src/fishregression/: main.py  pred.py
src/fishregression/model/: manager.py
