[project]
name = "fishregression"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.5.1",
    "fastapi>=0.114.0",
    "uvicorn[standard]>=0.30.6",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
fish-predict="fishregression.pred:pred"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
]
pytest = [
    "pytest>=8.3.2",
]
